// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WorkspaceTokenTransfer.vue > Should fetch and display transfers 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Token Transfers (ERC-20)</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <token-transfers-stub transfers="[object Object]" headers="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" loading="false" sortby="" count="10" address="" density="default" withtransactiondata="false" withtokendata="false" nodatatext="No ERC-20 token transfers found." withcount="false"></token-transfers-stub>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`WorkspaceTokenTransfer.vue > Should handle fetch error 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Token Transfers (ERC-20)</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <token-transfers-stub transfers="" headers="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" loading="false" sortby="" count="0" address="" density="default" withtransactiondata="false" withtokendata="false" nodatatext="No ERC-20 token transfers found." withcount="false"></token-transfers-stub>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`WorkspaceTokenTransfer.vue > Should show the component with loading state 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Token Transfers (ERC-20)</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <token-transfers-stub transfers="" headers="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" loading="false" sortby="" count="0" address="" density="default" withtransactiondata="false" withtokendata="false" nodatatext="No ERC-20 token transfers found." withcount="false"></token-transfers-stub>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`WorkspaceTokenTransfer.vue > Should update transfers when options change 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <h2 class="text-h6 font-weight-medium">Token Transfers (ERC-20)</h2>
  <hr class="v-divider v-theme--light my-4" aria-orientation="horizontal" role="separator">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-text">
      <token-transfers-stub transfers="[object Object]" headers="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]" loading="false" sortby="" count="20" address="" density="default" withtransactiondata="false" withtokendata="false" nodatatext="No ERC-20 token transfers found." withcount="false"></token-transfers-stub>
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
